--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+    <meta charset="utf-8" />
+    <title>Felicia's Resumé</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/FeliciaLordell/resume/blob/main/Felicia%20Lordell%20Resum%C3%A9.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
-  </body>
+<body>
+  <iframe src="https://docs.google.com/gview?url=https://github.com/FeliciaLordell/resume/blob/main/Felicia%20Lordell%20Resum%C3%A9.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+</body>
 </html>
