--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>Felicia's Resumé</title>
 </head>
 <body>
-  <iframe src="https://docs.google.com/gview?url=https://github.com/FeliciaLordell/resume/blob/main/Felicia%20Lordell%20Resum%C3%A9.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <iframe src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/FeliciaLordell/resume/main/Felicia%20Lordell%20Resum%C3%A9.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
 </body>
 </html>
+
